syntax = "proto3";

option csharp_namespace = "Api.Students";

package student;

// The greeting service definition.
service StudentsGrpc {
  // Sends a greeting
  rpc AddStudentInfo (StudentRequest) returns (StudentReply);
}

message Student{
  string studentId = 1;
  string name = 2;
  int32 age = 3;
  string course = 4;
}

// The request message for GetStudentInfo
message StudentRequest {
  Student student = 1;  
}

// The response message for GetStudentInfo
message StudentReply {  
  Student student= 1;
}